# openarm-nodes

./: .gitignore  BRINGUP.md  Cargo.toml  README.md  peppy_launcher.json5
depth_camera/: peppy.json5
openarm01_arm_isaac/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_arm_isaac/src/: config.rs  follow.rs  main.rs  services.rs  setctrl.rs  state.rs  state_stream.rs  stream.rs  trajectory.rs  transport.rs
openarm01_arm_isaac/src/actions/: move_arm.rs  move_arm_joints.rs
openarm01_arm_isaac/src/pipeline/: telemetry.rs
openarm01_arm_isaac/src/services/: get_arm_id.rs  get_joint_positions.rs
openarm01_arm_mujoco/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_arm_mujoco/src/: actions.rs  config.rs  follow.rs  main.rs  passthrough.rs  services.rs  state.rs  state_stream.rs  stream.rs  trajectory.rs
openarm01_arm_mujoco/src/actions/: move_arm.rs  move_arm_joints.rs
openarm01_arm_mujoco/src/pipeline/: telemetry.rs
openarm01_arm_mujoco/src/services/: get_joint_positions.rs
openarm01_backbone/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_backbone/config/: sim_bridge.json5
openarm01_backbone/config/presets/: isaac_openarm.json5  mujoco_openarm.json5
openarm01_backbone/scripts/: download_assets.sh
openarm01_backbone/src/: actions.rs  arm_pair.rs  bridge.rs  chase.rs  coordinator.rs  governor.rs  main.rs  openarm_v10.rs  orchestrator.rs  pacer.rs  planner.rs  startup.rs  streams.rs  trajectory.rs  types.rs
openarm01_backbone/src/actions/: arm.rs  gripper.rs  move_arm_joints.rs  move_gripper.rs
openarm01_backbone/variants/isaac/: apptainer.def  peppy.json5
openarm01_backbone/variants/isaac/robots/openarm/: _launcher.py
openarm01_backbone/variants/isaac/robots/openarm/openarm/: launch.py
openarm01_backbone/variants/mujoco/: apptainer.def  peppy.json5
openarm01_backbone/variants/mujoco/config/presets/: mujoco_openarm.json5
openarm01_backbone/variants/mujoco/exts/mujoco.peppy.backbone/peppy_mujoco/backbone/: __init__.py  extension.py
openarm01_backbone/variants/mujoco/robots/openarm/: _launcher.py
openarm01_backbone/variants/mujoco/robots/openarm/openarm/: launch.py
openarm01_gripper/variants/default/: Cargo.toml  apptainer.def  peppy.json5
openarm01_gripper/variants/default/src/: control.rs  main.rs
openarm01_gripper/variants/mujoco/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_gripper/variants/mujoco/src/: config.rs  drivers.rs  error.rs  main.rs  services.rs  state.rs
openarm01_gripper/variants/mujoco/src/actions/: move_gripper.rs
openarm01_gripper/variants/mujoco/src/drivers/: mjdata_bus.rs
openarm01_gripper/variants/mujoco/src/pipeline/: telemetry.rs
openarm01_gripper_isaac/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_gripper_isaac/src/: actions.rs  config.rs  follow.rs  main.rs  passthrough.rs  setctrl.rs  state.rs  state_stream.rs  stream.rs  transport.rs
openarm01_gripper_isaac/src/actions/: move_gripper.rs
openarm01_gripper_isaac/src/pipeline/: telemetry.rs
openarm01_gripper_isaac/src/services/: get_gripper_id.rs
openarm01_gripper_mujoco/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_gripper_mujoco/src/: config.rs  main.rs  passthrough.rs  state.rs  state_stream.rs  stream.rs  transport.rs
openarm01_gripper_mujoco/src/actions/: move_gripper.rs
openarm01_gripper_mujoco/src/pipeline/: telemetry.rs
openarm01_gripper_mujoco/src/services/: get_gripper_id.rs
openarm01_joint_commander/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_joint_commander/config/: joint_limits.json5
openarm01_joint_commander/src/: collision_status.rs  command_stream.rs  gripper_states.rs  joint_states.rs  main.rs  state.rs  ui.rs
openarm01_joint_commander/src/actions/: mod.rs  move_arm_joints.rs  move_gripper.rs
openarm01_joint_commander/static/: index.html
openarm01_joint_commander/variants/keyboard/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm01_joint_commander/variants/keyboard/config/: openarm_left.toml  openarm_right.toml
openarm01_joint_commander/variants/keyboard/src/: actions.rs  config.rs  error.rs  input.rs  lib.rs  main.rs  types.rs  ui.rs
openarm01_joint_commander/variants/keyboard/src/actions/: move_arm_joints.rs  move_gripper.rs
openarm01_joint_commander/variants/pose_estimation/: apptainer.def  peppy.json5
openarm_arm/: Cargo.toml  apptainer.def  peppy.json5
openarm_arm/src/: control.rs  friction.rs  main.rs  stream.rs
openarm_backbone/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm_backbone/src/: actions.rs  arm_pair.rs  coordinator.rs  governor.rs  main.rs  planner.rs  servo.rs  startup.rs  streams.rs  torso.rs  trajectory.rs  types.rs
openarm_backbone/src/actions/: arm.rs  gripper.rs
openarm_commander/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm_commander/src/: collision_status.rs  command_stream.rs  error.rs  gestures.rs  gripper_states.rs  joint_states.rs  main.rs  move_arm.rs  move_arm_joints.rs  move_gripper.rs  owner.rs  pose.rs  result_wait.rs  state.rs  ui.rs
openarm_commander/static/: index.html
openarm_gripper_isaac/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm_gripper_isaac/src/: config.rs  follow.rs  main.rs  passthrough.rs  state_stream.rs  stream.rs
openarm_gripper_isaac/src/actions/: move_gripper.rs
openarm_gripper_v2/: Cargo.toml  apptainer.def  peppy.json5
openarm_gripper_v2/src/: command_stream.rs  control.rs  follow.rs  geometry.rs  main.rs  stream.rs
openarm_joint_commander/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm_joint_commander/config/: joint_limits.json5
openarm_joint_commander/src/: collision_status.rs  command_stream.rs  error.rs  gripper_states.rs  joint_states.rs  main.rs  pose.rs  state.rs  ui.rs
openarm_joint_commander/src/actions/: move_arm.rs  move_arm_joints.rs
openarm_joint_commander/static/: index.html
openarm_ker/: Cargo.toml  README.md  apptainer.def  peppy.json5
openarm_ker/src/: main.rs  mapping.rs  protocol.rs  publish.rs  reader.rs  transport.rs
(+294 files in other folders)
