[package]
name = "openarm01_backbone"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
srs_model = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "srs_model" }
bimanual_collision_model = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "bimanual_collision_model" }
openarm_description = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "openarm_description", features = ["meshes"] }
control_core = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "control_core" }
