[package]
name = "openarm01_gripper_mujoco"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
capnp    = "0.25"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
sim_bridge_core = { git = "https://github.com/Peppy-bot/nodes_shared_code", rev = "ba06070ca98a5d0583758bfd7e160a1fec050f8c" }
# Needed only for the standalone test harness (src/bin/test_move_gripper.rs)
# which uses #[derive(JsonSchema)] for its empty params struct.
schemars = "1.2"

[features]
# Builds the standalone test harness `test_move_gripper`. Gated off by default
# so the apptainer build (plain `cargo build --release`) ships only the node
# binary and not dev tooling.
test-tools = []

[[bin]]
name = "openarm01_gripper_mujoco"
path = "src/main.rs"

[[bin]]
name = "test_move_gripper"
path = "src/bin/test_move_gripper.rs"
required-features = ["test-tools"]
