[package]
name = "openarm_backbone"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
srs_model = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "srs_model" }
bimanual_collision_model = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "bimanual_collision_model" }
openarm_description = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "openarm_description", features = ["meshes"] }
control_core = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "control_core" }

# The collision narrowphase (GJK/EPA over convex hulls) and forward kinematics
# are dense nalgebra f64 kernels. At the dev profile's opt-level 0 the governor's
# simulation-loop tests, which fire thousands of distance queries, run ~100x
# slower (~100s vs <1s). Optimizing only these geometry crates keeps this crate
# itself unoptimized and debuggable while making the tests usable.
[profile.dev.package.bimanual_collision_model]
opt-level = 3

[profile.dev.package.srs_model]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3
