[package]
name = "openarm_commander"
version = "0.1.0"
edition = "2024"

[dependencies]
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
openarm_description = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "feat/arm-constructor", package = "openarm_description" }
srs_model = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "srs_model" }
urdf-rs = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
