[package]
name = "openarm_gripper_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
openarm_can = { git = "https://github.com/Peppy-bot/public-peppy-libs", branch = "main", package = "openarm_can" }
peppygen = { path = ".peppy/libs/peppygen" }
peppylib = { path = ".peppy/libs/peppylib" }
